# qwen-api

./: .env.example  .gitignore  .qwen_bearer_token  AUTHENTICATION.md  AUTODEPLOY.md  CHANGELOG.md  DEPENDENCIES.md  DEPLOYMENT.md  Dockerfile  ENDPOINT_TEST_RESULTS.md  GETTING_STARTED.md  GET_TOKEN.md  GIST_INSTRUCTIONS.md  GIST_README.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  INSTALL.md  INSTALLATION.md  MODEL_ALIAS_SYSTEM.md  Makefile  NATIVE_TOOLS.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  SCRIPTS_README.md  TEST_BASELINE.txt  TEST_RESULTS.md  UPGRADE_COMPLETE.md  VALIDATION_REPORT.md  all.sh  autodeploy.sh  deploy.sh  deploy_qwen_api.sh  deploy_standalone.sh  docker-compose.yml  extract_qwen_token.py  final_validation.sh  index.d.ts  index.js  index.ts  (+42 more)
.sessions/: qwen_browser_session.json  qwen_session.json  qwen_token_cache.json
app/: __init__.py  cli.py  model_router.py  requirements.txt
app/auth/: __init__.py  browser_auth.py  provider_auth.py  provider_auth_new.py  qwen_token_extractor.py  token_compressor.py  token_manager.py
app/core/: __init__.py  config.py  health.py  image_endpoints.py  openai.py  qwen_transformer.py
app/middleware/: __init__.py  openapi_validator.py
app/models/: __init__.py  schemas.py
app/providers/: __init__.py  provider_factory.py  qwen_provider.py  qwen_proxy_provider.py  qwen_simple_proxy.py
app/qwen-api/: sse_tool_handler.py
app/utils/: __init__.py  flareprox.py  flareprox_manager.py  http_client.py  reload_config.py  request_tracker.py  sse_tool_handler.py  token_pool.py  token_utils.py  (+1 more)
docker/: Dockerfile  deploy.sh  docker-compose.yml
docs/: README.md
examples/: direct_requests_example.py  openai_client_example.py
py-api/: README_REFACTOR.md  main.py  requirements.txt  setup.py  start.py
scripts/: README.md  USAGE.md  all.sh  deploy.sh  get_qwen_token.py  install.sh  qwen_token_real.py  send_openai_request.sh  send_request.sh  setup.sh  start.sh  test_integration.sh  validate_json.py
tests/: README.md  __init__.py  conftest.py  quick_test.py  test_all_endpoints.py  test_model_aliases.py  test_native_tools.py  test_no_tools.py  test_qwen_provider.py  test_working_models.py
(+49 files in other folders)
